last push. Stop, step away, go to bed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>Time Left: <span id="time">100</span> seconds!</div>
-    <div>High Score <span id="highScore">0</span> </div>
+    <div> <span id="highScore"></span> </div>
 
     <div id="instructions" class="instructions">
         <h1>Code Quiz</h1>
